# Simple-Discrete-Time-System

./: .clang-tidy  CMakeLists.txt  README.md  vcpkg.json
.github/workflows/: cmake.yml
incl/sdts/: Filter.hpp  InputSignal.hpp  OutputSignal.hpp  Signal.hpp
include/sdst/: Filter.hpp  InputSignal.hpp
include/sdts/: InputSignal.hpp  OutputSignal.hpp
tests/: CMakeLists.txt  TestDifferenceEquation.cpp  TestFilters.cpp  TestInputSignal.cpp  test.cpp
